--- a/.github/workflows/flutter_build.yml
+++ b/.github/workflows/flutter_build.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build APK
         run: flutter build apk
 
-      - name: Upload APK
-        uses: actions/upload-artifact@v2
-        with:
-          name: release-apk
-          path: build/app/outputs/flutter-apk/app-release.apk
+   #   - name: Upload APK
+   #     uses: actions/upload-artifact@v2
+    #    with:
+    #      name: release-apk
+     #     path: build/app/outputs/flutter-apk/app-release.apk
